<resources>
    <string name="app_name">Fixy Worker</string>
    <string name="mapKey">AIzaSyBp-ZPIvxfguT0ohgpA4uCza8tHqR4zOrQ</string>
    <string-array name="Loading">
        <item>Loading...</item>
        <item>Please wait...</item>
    </string-array>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="ok_">OK</string>
    <string name="new_version">A newer version of String Messenger is available would you like to update?</string>
    <string name="cannot_connect_server">Cannot connect to server</string>
    <string name="error">Something went wrong!</string>
    <string name="internet">Internet connection is not available!</string>
    <string name="success">200</string>
    <string name="invalid_access_token">420</string>
    <string name="someone_logedin_some_other_device">Someone has logged in from same account from other device.</string>
    <string name="someone_register_some_other_device">Someone else has registered with same Phone number/Email id.</string>
    <string name="account_expired">Account Expired</string>
    <string name="lorem_ipsum_small">lorem ipsum</string>
    <string name="Lorem_Ipsum_large">Lorem Ipsum dolor sit amet ipsu dolor sit ame </string>
    <string name="Lorem_Ipsum_larger">Lorem Ipsum dolor sit amet ipsu dolor sit ame Lorem Ipsum Lorem Ipsum dolor sit amet ipsu dolor sit ame Lorem Ipsum Lorem Ipsum dolor sit amet ipsu dolor sit ame Lorem Ipsum Lorem Ipsum dolor sit amet ipsu dolor sit ame Lorem Ipsum Lorem Ipsum dolor sit amet ipsu dolor sit ame Lorem Ipsum dolor sit amet ipsu dolor sit ame Lorem Ipsum dolor sit amet ipsu dolor sit ame Lorem Ipsum dolor sit amet ipsu dolor sit ame Lorem Ipsum dolor sit amet ipsu dolor sit ame </string>
    <string name="title_activity_landing">LandingActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_there">Hello there</string>
    <string name="welcome_to_fixy">Welcome to Fixy!</string>
    <string name="please_enter_your_phone_number_to_get_started">Please enter your phone number to get \nstarted.</string>
    <string name="to_get_started">To get started</string>
    <string name="verify_your_number">Verify your number</string>
    <string name="please_enter_the_otp_sent_your_mobile_no">Please enter the OTP sent your mobile \nno.</string>
    <string name="didn_t_receive_an_otp">Didn\'t receive an OTP?</string>
    <string name="call">Call</string>
    <string name="resend">Resend</string>
    <string name="title_activity_create_profile">CreateProfileActivity</string>
    <string name="create_profile">CREATE PROFILE</string>
    <string name="full_name">Full Name</string>
    <string name="enter">Enter</string>
    <string name="email">Email</string>
    <string name="referral_code">Referral Code</string>
    <string name="gender">Gender</string>
    <string name="done">DONE</string>
    <string name="female">FEMALE</string>
    <string name="male">MALE</string>
    <string name="enter_referral_code_detail">Enter Referral code and earn 20 Coins. You can earn later more coins by referring your own referral code with other.</string>
    <string name="home">Home</string>
    <string name="bookings">Bookings</string>
    <string name="coins">Coins</string>
    <string name="profile">Profile</string>
    <string name="congratulation">Congratulation!</string>
    <string name="congratulatin_text_mess">You have earned 100 coin,you can use these coin to request a service</string>
    <string name="buy_more_coin">Buy More Coin</string>
    <string name="browse_service">Let\'s Start</string>
    <string name="pending">Pending</string>
    <string name="booked">Booked</string>
    <string name="my_requests">My Request</string>
    <string name="main_services">Main Services</string>
    <string name="view_all">View all</string>
    <string name="beauty">Beauty</string>
    <string name="recommended_services">Recommended Service</string>
    <string name="share_and_earn">Share and Earn</string>
    <string name="requested">Requested</string>
    <string name="accepted">Accepted</string>
    <string name="on_the_way">On the way</string>
    <string name="confirmed">Confirmed</string>
    <string name="confirm">Confirm</string>
    <string name="services">services</string>
    <string name="workers_ads">worker\'s ads</string>
    <string name="luke_brown">Luke Brown</string>
    <string name="plumber">Plumber</string>
    <string name="booking_history">Booking \nHistory</string>
    <string name="my_address">My \nAddress</string>
    <string name="payment_method">Payment \nMethod</string>
    <string name="account_settings">Account \nSettings</string>
    <string name="home_add">Home</string>
    <string name="work_add">Work</string>
    <string name="other_add">Other</string>
    <string name="landmark">Landmark</string>
    <string name="flat_house_no">House / Flat No.</string>
    <string name="address">Address</string>
    <string name="change">Change</string>
    <string name="search_your_location">Search your Location..</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="enable">Enable</string>
    <string name="enable_location_setting">Enable Location Permissions from settings</string>
    <string name="location_permission">Location permission is needed for core functionality.</string>
    <string name="read_phone_state_permission">Read Phone State permission is needed for core functionality.</string>
    <string name="label_name">Label Name</string>
    <string name="temp_emial">shubham.v@applify.co</string>
    <string name="temp_num">+919469152174</string>
    <string name="phone_no">Phone no.</string>
    <string name="fetching">Fetching..</string>
    <string name="label_your_address">Label you address</string>
    <string name="please_select_label">Please Select Label</string>
    <string name="change_address">Change Address</string>
    <string name="please_change_address">Please change your address</string>
    <string name="name_already_exist">Name already exist</string>
    <string name="delete">Delete</string>
    <string name="add_new">Add New</string>
    <string name="please_enter_label_name">Please enter label name</string>
    <string name="remove_add_warning">Do you want to remove this address?</string>
    <string name="hash">#</string>
    <string name="change_no">Change no.</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="rate_us">Rate us</string>
    <string name="track">Track</string>
    <string name="about_us">About us</string>
    <string name="faq">FAQ</string>
    <string name="refer_a_frient_earn"><![CDATA[Refer a Friend & Earn]]></string>
    <string name="version_1_0">Version 1.0</string>
    <string name="fixy">FIXY</string>
    <string name="title">TITLE</string>
    <string name="otp">OTP</string>
    <string name="provide_otp_to_worker">You have to provide this OTP to worker to start the job</string>
    <string name="booking_detail">Booking Detail</string>
    <string name="pending_detail">pending_detail</string>
    <string name="time_left_title">Time left to accept the request</string>
    <string name="time_left_mess">Your request would be auto expired when time will be complete and your deducted coin would be credit to your coin.</string>
    <string name="looking_for">Looking For</string>
    <string name="info">Info</string>
    <string name="verification">Verification</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="select_services_you_want_to_offer">Select services you want to offer</string>
    <string name="provide_your_id_for_verification">Provide your ID for verification</string>
    <string name="verification_id_title">Provide your ID for verification.</string>
    <string name="profile_pic_match_warning">Your document picture should be match with your profile picture.</string>
    <string name="name_on_document">Your Name as on Document</string>
    <string name="document_number">Document Number</string>
    <string name="aadhaar_card">AADHAAR CARD</string>
    <string name="document_type">Select your document type</string>
    <string name="back_image">Back Image</string>
    <string name="front_image">Front Image</string>
    <string name="email_id">Email Id</string>
    <string name="view_photo">View Photo</string>
    <string name="email_not_empty">Email field cannot be empty</string>
    <string name="email_not_valid">Please enter valid Email</string>
    <string name="password_empty">Password field cannot be empty</string>
    <string name="confirm_password_validation">New Password and Re-Enter New Password doesn\'t match.</string>
    <string name="password_min_char">Password must be of minimum 8 characters</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="email_not_fetch">Email is mandatory to continue. Please grant email permission or choose other signup option.</string>
    <string name="enter_phone_number">Please enter phone number</string>
    <string name="start_with_zero">Phone number cannot start with zero</string>
    <string name="invalid_phone_number">Please enter a valid phone number to continue</string>
    <string name="register_number">Register Number</string>
    <string name="verify_number_header_txt">Enter your Verification code we sent to</string>
    <string name="invalid_OTP">Invalid OTP</string>
    <string name="full_name_empty">Full Name cannot be Empty</string>
    <string name="set_your_bday">Please Select Date of Birth</string>
    <string name="fullname_length"> Name must be minimum 2 characters</string>
    <string name="error_card_no">Enter card number</string>
    <string name="error_valid_card_no">Enter valid card number</string>
    <string name="error_month">Enter expiry month</string>
    <string name="error_year">Enter expiry year</string>
    <string name="error_valid_account">Enter valid account number</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_valid_otp">Enter Valid OTP</string>
    <string name="not_alphabet">Please enter valid name</string>
    <string name="choose_a_country">Choose a country</string>
    <string name="add_card_successfully"> Card added successfully</string>
    <string name="invalid_month">Invalid expiry month</string>
    <string name="file_deleted">file deleted</string>
    <string name="delete_Attachement_confirm">Are you sure you want to remove this?</string>
    <string name="invalid_cvv">Invalid cvv number</string>
    <string name="invalid_card">Invalid Card</string>
    <string name="invalid_expiry_date">Invalid expiry date</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="select_photo_validation">Please add your picture</string>
    <string name="gender_validation">Please select your gender</string>
    <string name="offer_detail">Offer Detail</string>
    <string name="original_price">Original Price</string>
    <string name="offer_percentage">Offer percentage</string>
    <string name="offer_period">Offer Period</string>
    <string name="offer_description">Offer Description</string>
    <string name="write_description">write description..</string>
    <string name="enter_your_price">Enter your price</string>
    <string name="select_percentage_validation">Select percentage</string>
    <string name="select_period">Select Period</string>
    <string name="confirm_finish_job">Confirm finish job</string>
    <string name="successfully_complete_job">Are you sure to finish this job?\n Make sure you have successfully completed this job.</string>
</resources>