<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.AdsDetailFormFragment">

    <com.app.fixy_worker.customviews.BoldTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:text="@string/offer_detail"
        android:layout_marginTop="@dimen/_10sdp"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_11ssp" />

    <ScrollView
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:background="@mipmap/ic_rec_offer_n"
            android:layout_marginRight="@dimen/_15sdp"
            android:orientation="vertical"
            android:padding="@dimen/_20sdp">

            <com.app.fixy_worker.customviews.SemiboldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/ic_price"
                android:drawablePadding="@dimen/_5sdp"
                android:text="@string/original_price"
                android:textAllCaps="true"
                android:textColor="@color/gold"
                android:textSize="@dimen/_11ssp" />

            <com.app.fixy_worker.customviews.MaterialEditText
                android:id="@+id/ed_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="10"
                android:paddingLeft="@dimen/_5sdp"
                android:text=""
                android:textColorHint="@color/grey_color"
                android:hint="@string/enter_your_price"
                android:textColor="@color/gold"
                android:textSize="@dimen/_15ssp"
                app:met_hideUnderline="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1ssp"
                android:background="@color/grey_line" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.app.fixy_worker.customviews.SemiboldTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/ic_percentage"
                    android:drawablePadding="@dimen/_5sdp"
                    android:text="@string/offer_percentage"
                    android:textAllCaps="true"
                    android:textColor="@color/gold"
                    android:textSize="@dimen/_11ssp" />

                <ImageView
                    android:id="@+id/ic_info_per"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:src="@mipmap/ic_info" />
            </RelativeLayout>

            <com.app.fixy_worker.customviews.SemiboldTextView
                android:id="@+id/txt_percentage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/_10sdp"
                android:textColorHint="@color/grey_text"
                android:paddingTop="@dimen/_5sdp"
                android:drawableRight="@mipmap/ic_offer_arrow_down"
                android:paddingLeft="@dimen/_5sdp"
                android:hint="@string/select_percentage_validation"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                app:met_hideUnderline="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1ssp"
                android:background="@color/grey_line" />

            <com.app.fixy_worker.customviews.SemiboldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:drawableLeft="@mipmap/ic_offer_period"
                android:drawablePadding="@dimen/_5sdp"
                android:text="@string/offer_period"
                android:textAllCaps="true"
                android:textColor="@color/gold"
                android:textSize="@dimen/_11ssp" />

            <com.app.fixy_worker.customviews.SemiboldTextView
                android:id="@+id/txt_period"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/_10sdp"
                android:paddingTop="@dimen/_5sdp"
                android:drawableRight="@mipmap/ic_offer_arrow_down"
                android:paddingLeft="@dimen/_5sdp"
                android:hint="@string/select_period"
                android:textColorHint="@color/grey_color"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                app:met_hideUnderline="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1ssp"
                android:background="@color/grey_line" />

            <com.app.fixy_worker.customviews.SemiboldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:drawableLeft="@mipmap/ic_offer_description"
                android:drawablePadding="@dimen/_5sdp"
                android:text="@string/offer_description"
                android:textAllCaps="true"
                android:textColor="@color/gold"
                android:textSize="@dimen/_11ssp" />

            <com.app.fixy_worker.customviews.MaterialEditText
                android:id="@+id/ed_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_10sdp"
                android:text=""
                android:maxLines="10"
                android:maxLength="300"
                android:textColorHint="@color/grey_color"
                android:hint="@string/write_description"
                app:met_hideUnderline="true"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"/>
        </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>