<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_round_corner_solid"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:paddingBottom="@dimen/_20sdp"
        android:paddingLeft="@dimen/_20sdp"
        android:paddingRight="@dimen/_20sdp"
        android:paddingTop="@dimen/_20sdp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_req_successfully" />

        <com.app.fixy_worker.customviews.SemiboldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/confirm_finish_job"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp" />

        <com.app.fixy_worker.customviews.RegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/successfully_complete_job"
            android:textAllCaps="false"
            android:textColor="@color/grey_text_dark"
            android:textSize="@dimen/_10ssp" />

        <com.app.fixy_worker.customviews.BoldTextView
            android:id="@+id/txt_confirm"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/black_round"
            android:gravity="center"
            android:paddingBottom="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
            android:text="@string/confirm"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp" />

        <com.app.fixy_worker.customviews.BoldTextView
            android:id="@+id/txt_cancel"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/grey_round_stroke"
            android:gravity="center"
            android:paddingBottom="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp" />
    </LinearLayout>
</LinearLayout>