<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:src="@mipmap/ic_notifications"/>

        <com.app.fixy.customviews.SemiboldTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_requests"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:background="@color/colorPrimary">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight="1">

            <com.app.fixy.customviews.SemiboldTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/booked"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:background="@drawable/black_round"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp"
                android:layout_centerInParent="true" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight="1">

            <com.app.fixy.customviews.SemiboldTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pending"
                android:gravity="center"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:background="@drawable/grey_round_stroke"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp"
                android:layout_centerInParent="true" />
        </LinearLayout>
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v4.view.ViewPager>
</LinearLayout>